fixed user profile picture not showing up

--- a/frontend/src/pages/ProductPage/ProductPage.css
+++ b/frontend/src/pages/ProductPage/ProductPage.css
@@ -52,6 +52,7 @@
 .user-img {
     width: 50px;
     height: 50px;
+    border-radius: 25px;
 }
 
 .username {
